[package]
name = "mt_net"
version = "0.1.0"
edition = "2021"

[features]
all = ["client", "server", "random", "serde"]
test = ["client", "server", "random"]
client = []
random = ["dep:generate-random", "dep:rand"]
serde = ["dep:serde", "dep:serde_arrays", "enumset/serde"]
server = []

[dependencies]
mt_ser = { git = "https://github.com/minetest-rust/mt_ser" }
enumset = { git = "https://github.com/Lymia/enumset" }
generate-random = { git = "https://github.com/minetest-rust/generate-random", features = ["enumset"], optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }

[dev-dependencies]
libtest-mimic = "0.6.0"

[[test]]
name = "random"
path = "tests/random.rs"
harness = false
