[package]
name = "mt_net"
version = "0.1.0"
edition = "2021"

[features]
all = ["client", "server", "random", "serde", "conn"]
client = []
conn = ["dep:mt_rudp", "dep:thiserror"]
random = ["dep:generate-random", "dep:rand"]
serde = ["dep:serde", "dep:serde_arrays", "enumset/serde"]
server = []
test = ["client", "server", "random"]

[dependencies]
delegate = "0.9.0"
enumset = { git = "https://github.com/Lymia/enumset" }
generate-random = { git = "https://github.com/minetest-rust/generate-random", features = ["enumset"], optional = true }
mt_rudp = { git = "https://github.com/minetest-rust/mt_rudp", optional = true }
mt_ser = { git = "https://github.com/minetest-rust/mt_ser" }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }
thiserror = { version = "1.0.38", optional = true }

[dev-dependencies]
libtest-mimic = "0.6.0"

[[test]]
harness = false
name = "random"
path = "tests/random.rs"
